[package]
name = "tauri-plugin-sse"
version = "0.1.0"
authors = [ "Amit Sami Nosatzki" ]
description = "A simple Tauri plugin for Server-Sent Events (SSE), enabling real-time, one-way updates from server to your Tauri frontend."
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sse"

[dependencies]
tauri = { version = "2.9.2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
